# finch_old

./: 404.html  Cargo.toml  Introduction.html  README.md  book.toml  index.html  package-lock.json  package.json  print.html  searchindex.js  searchindex.json
.github/workflows/: .gh-pages.yml
Helpers/: each.html  if.html  index.html  js.html  template.html
Syntax/: Expressions.html  Helpers.html  index.html
benchmarks/: index.js  package-lock.json  package.json  raw.js
book/: 404.html  Introduction.md  SUMMARY.md  print.html
book/Helpers/: each.md  if.md  index.md  js.md  template.md
book/Syntax/: Expressions.md  Helpers.md  index.md
book/src/: SUMMARY.md
book/src/Syntax/: index.md
src/: compiler.rs  convert.rs  default_helpers.rs  error.rs  lib.rs  memory.rs  parser.rs  pre_compiler.rs  transpiler.rs
