[package]
name = "finch"
version = "0.0.1"
description = "A template engine for node.js"
authors = ["GoogleFeud"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]
